# AI-learn

./: .gitignore  README.md
01-foundations/: README.md
exercises/: README.md  pyproject.toml  setup_practice.py
exercises/01-foundations/: README.md
exercises/01-foundations/ex1_neuron/: solution.py  template.py
exercises/01-foundations/ex2_training_loop/: solution.py  template.py
exercises/02-llm/: README.md
exercises/02-llm/ex1_tokens_and_embeddings/: solution.py  template.py
exercises/02-llm/ex2_roles_and_temperature/: solution.py  template.py
exercises/03-agents/: README.md
exercises/03-agents/ex1_tool_calling/: solution.py  template.py
exercises/03-agents/ex2_react_loop/: solution.py  template.py
exercises/04-rag/: README.md
exercises/04-rag/ex1_mini_rag_pipeline/: solution.py  template.py
exercises/05-pipelines-frameworks/: README.md
exercises/05-pipelines-frameworks/ex1_langchain_chain/: solution.py  template.py
exercises/05-pipelines-frameworks/ex2_langgraph_agent/: solution.py  template.py
exercises/05-pipelines-frameworks/ex3_pytorch_training/: solution.py  template.py
exercises/06-model-adaptation/: README.md
exercises/06-model-adaptation/ex1_quantization_sim/: solution.py  template.py
exercises/06-model-adaptation/ex2_lora_toy/: solution.py  template.py
exercises/06-model-adaptation/ex3_dpo_loss/: solution.py  template.py
exercises/07-inference/: README.md
exercises/07-inference/ex1_latency_vs_throughput/: solution.py  template.py
exercises/08-safety/: README.md
exercises/common/: lmstudio_client.py
(+62 files in other folders)
