[project]
name = "ai-learn-exercises"
version = "0.1.0"
description = "Практические занятия к разделам 01–08 базы знаний по AI"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "openai>=1.40",
    "numpy>=2.0",
    "torch>=2.3",
    "langchain>=0.3",
    "langchain-openai>=0.2",
    "langgraph>=0.2",
    "requests>=2.32",
]

[tool.uv]
package = false
